[deps] Upgrade to Rhino 1.7.11 (https://github.com/mozilla/rhino/releases/tag/Rhino1_7_11_Release)