@@ -5,7 +5,20 @@
 
 package org.mozilla.javascript.optimizer;
 
-import org.mozilla.javascript.*;
+import org.mozilla.javascript.ArrowFunction;
+import org.mozilla.javascript.Callable;
+import org.mozilla.javascript.ConsString;
+import org.mozilla.javascript.Context;
+import org.mozilla.javascript.ContextFactory;
+import org.mozilla.javascript.Function;
+import org.mozilla.javascript.JavaScriptException;
+import org.mozilla.javascript.NativeFunction;
+import org.mozilla.javascript.NativeGenerator;
+import org.mozilla.javascript.NativeIterator;
+import org.mozilla.javascript.Script;
+import org.mozilla.javascript.ScriptRuntime;
+import org.mozilla.javascript.Scriptable;
+import org.mozilla.javascript.ScriptableObject;
 
 public final class OptRuntime extends ScriptRuntime
 {
@@ -117,7 +130,7 @@ public final class OptRuntime extends ScriptRuntime
                                       Context cx, Scriptable scope,
                                       int incrDecrMask)
     {
-        return ScriptRuntime.elemIncrDecr(obj, new Double(index), cx, scope,
+        return ScriptRuntime.elemIncrDecr(obj, Double.valueOf(index), cx, scope,
                                           incrDecrMask);
     }
 
@@ -170,7 +183,7 @@ public final class OptRuntime extends ScriptRuntime
         } else if (num != num) {
             return NaNobj;
         }
-        return new Double(num);
+        return Double.valueOf(num);
     }
 
     static String encodeIntArray(int[] array)
@@ -219,21 +232,18 @@ public final class OptRuntime extends ScriptRuntime
 
     public static void main(final Script script, final String[] args)
     {
-        ContextFactory.getGlobal().call(new ContextAction() {
-            public Object run(Context cx)
-            {
-                ScriptableObject global = getGlobal(cx);
+        ContextFactory.getGlobal().call(cx -> {
+            ScriptableObject global = getGlobal(cx);
 
-                // get the command line arguments and define "arguments"
-                // array in the top-level object
-                Object[] argsCopy = new Object[args.length];
-                System.arraycopy(args, 0, argsCopy, 0, args.length);
-                Scriptable argsObj = cx.newArray(global, argsCopy);
-                global.defineProperty("arguments", argsObj,
-                                      ScriptableObject.DONTENUM);
-                script.exec(cx, global);
-                return null;
-            }
+            // get the command line arguments and define "arguments"
+            // array in the top-level object
+            Object[] argsCopy = new Object[args.length];
+            System.arraycopy(args, 0, argsCopy, 0, args.length);
+            Scriptable argsObj = cx.newArray(global, argsCopy);
+            global.defineProperty("arguments", argsObj,
+                                  ScriptableObject.DONTENUM);
+            script.exec(cx, global);
+            return null;
         });
     }
 
